--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,3 +1,43 @@
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?hzbnkn');
+  src:  url('../fonts/icomoon.eot?hzbnkn#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?hzbnkn') format('truetype'),
+    url('../fonts/icomoon.woff?hzbnkn') format('woff'),
+    url('../fonts/icomoon.svg?hzbnkn#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change ../fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-calculator2:before {
+  content: "\e902";
+}
+.icon-calculator1:before {
+  content: "\e901";
+}
+.icon-menu:before {
+  content: "\e900";
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 html, body{
     overflow: auto;
@@ -45,6 +85,29 @@ body::after {
 
     
   .active-link{
-    background-color: #0050A0 !important;
+    background-color: #000716 !important;
     color: white !important;
   }
+ 
+
+
+  @media screen and (max-width: 1024px) {
+
+  }
+  
+  @media screen and (max-width: 767px) {
+
+        
+  }
+  @media screen and (max-width: 480px) {
+  
+  }
+  
+  @media screen and (max-width: 320px) {
+  
+  }
+  
+    
+  
+
+  
