--- a/src/assets/styles/components/Contact.scss
+++ b/src/assets/styles/components/Contact.scss
@@ -11,18 +11,49 @@
   animation-duration: 1s;
 }
 .contact-detail{
+  font-size: 1em;
     display: flex;
     flex-direction: column;
     margin-top: 8em;
     margin-bottom:40vh;
     background-color: white;
-    width: 50%;
+    width: 40%;
     border-radius: 1em;
     text-align: center;
     padding-top: 2em;
     padding-bottom: 2em;
+    background-color: #000716;
+    color: white;
+    opacity: 0.8;
 }
+
+  /* On mouse-over, add a deeper shadow */
+  .contact-detail:hover {
+    box-shadow: 0 8px 16px 0 rgba(255,255,255,0.2);
+  }
 
 .contact-detail a{
     margin-bottom: 1em;
+    color: white;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 767px) {
+ .contact-detail{
+  width: 80%;
+  padding: 1em;
+  font-size: 0.8em;
+ }
+      
+}
+@media screen and (max-width: 480px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
 }
