--- a/src/assets/styles/components/DataIn.scss
+++ b/src/assets/styles/components/DataIn.scss
@@ -2,6 +2,10 @@
     from {opacity: 0;}
     to {opacity: 1;}
   }
+
+.icon-exec {
+    display: none;
+}  
 .formData{
     display: flex;
     justify-content: space-between;
@@ -15,6 +19,7 @@
     padding-bottom: 4em;
     animation-name: appears-dataIn;
     animation-duration: 1s;
+    
 }
 
 .inits{
@@ -27,6 +32,9 @@
     padding-top:2em;
     padding-bottom: 1em;
     border-radius: 1em;
+    background: #000716;
+    color: white;
+    opacity: 0.8;
     
 
 }
@@ -36,10 +44,10 @@
 }
 .inits h1{
     margin-top: 0;
-    font-size: 2.2em;
+    font-size: 2em;
     color:#0050A0;
     font-weight: 900;
-    border-bottom:3px solid #0050A0;
+  
     margin-bottom:1em;
 }
 .inits label{
@@ -56,12 +64,13 @@
     background-color: white;
     border:1px solid black;
     border-radius: 2em;
+    width: 80%;
 
  }
 
  .inits input:focus{
     outline: none;
-    background-color: rgba(0,0,0,0.1);
+    background-color: #DDF1FF;
     transition:1s;
 }
 
@@ -107,16 +116,60 @@
 
 
  .tableData tr th{
-     border: 1px solid black;
+     border: 1px solid white;
      padding:0.1em;
-     background-color: #B5D6DC;
+     background-color: white;
      width: 40%;
+     color:black
      
  }
  .tableData tr td{
-    border: 1px solid black;
+    border: 1px solid white;
     padding:0.5em;
 }
 .vcRight{
     width: 60%;
 }
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 767px) {
+   
+  .formData{
+      display: block;
+  }  
+
+  .inits{
+      width: 90%;
+      margin-bottom: 2em;
+      margin-left: 10%;
+
+  }
+  .calcData{
+  display: none;
+}
+.icon-exec {
+    font-size: 3em;
+    margin:0;
+
+    position: fixed;
+    left: 0;
+    top: 50vh;
+    display: block;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: white;
+}
+}
+@media screen and (max-width: 480px) {
+
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
+
