--- a/src/assets/styles/components/Footer.scss
+++ b/src/assets/styles/components/Footer.scss
@@ -20,3 +20,27 @@
   .footer-first img{
       margin-right: 2em;
 }
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 767px) {
+  .footer-first{
+    font-size: 0.5em;
+  }
+  .footer-second{
+    font-size: 0.5em;
+  }
+  .footer-first img{
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
+
