--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -4,6 +4,22 @@
     justify-content: space-between;
 }
 
+.burger-button {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.8);
+    line-height: 45px;
+    text-align: center;
+    position: fixed;
+    z-index: 4;
+    left: 5px;
+    top: 5px;
+    color: white;
+    display: none;
+  }
+  
+
 .imgContainer{
     width: 20%;
     display: flex;
@@ -28,6 +44,7 @@
     margin: 0;
     color: #000716 ;
     font-family: 'Permanent Marker';
+    font-size: 1.2em;
 }
 
 .menu{
@@ -69,4 +86,72 @@
     background-color: white;
     color: black;
   }
+
+
+  @media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 767px) {
+    
+    .header{
+        display: block;
+    }
+    .imgContainer{
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+    }
+    .logo-image h1{
+        font-size: 10vh;
+        width: 100%;
+    }
+
+    .burger-button {
+        display: block;
+      }
+
+      .menu.is-active {
+        left: 0;
+      }
+
+      .menu {
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.9);
+        z-index: 3;
+        top: 0;
+        left: -100vw;
+        width: 80vw;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        bottom: 0;
+        transition: 0.5s;
+        font-size: 0.6em;
+        font-weight: bold;
+      }
+      .menu ol{
+          display: flex;
+          flex-direction: column;
+          padding-top: 15em;
+          padding-left: 5em;
+      }
+
+      .menu ol li{
+        display: flex;
+        flex-direction: column;
+        height: 4em;
+        font-size: 1.5em;
+      }
+      
+}
+@media screen and (max-width: 480px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
+
   
