--- a/src/assets/styles/components/Header.css
+++ b/src/assets/styles/components/Header.css
@@ -104,7 +104,7 @@
         justify-content: center;
     }
     .logo-image h1{
-        font-size: 10vh;
+        font-size: 15vw;
         width: 100%;
     }
 
