--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -12,6 +12,8 @@ body{
     display: block;
     background-color: black;
     font-family: 'Meera Inimai', sans-serif;
+    margin: 0px;
+    padding: 0px;
   
 }
 
@@ -59,7 +61,12 @@ body::after {
   }
   
   @media screen and (max-width: 767px) {
-
+    .container {
+     
+      max-width: 100vw;
+    
+  
+    }
         
   }
   @media screen and (max-width: 480px) {
