--- a/src/assets/styles/components/Footer.css
+++ b/src/assets/styles/components/Footer.css
@@ -6,6 +6,10 @@
     align-items: center;
     flex-wrap: wrap;
     font-size: 1.2em;
+    position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
   }
   
   .footer img {
@@ -35,6 +39,20 @@
   .footer-first img{
     display: none;
   }
+  .footer {
+  height: 40px;
+  }
+  .footer-first p{
+    margin-right:2em;
+    margin-top:0.2em;
+    margin-bottom:0.2em;
+  }
+  .footer-second p{
+
+    margin-top:0.2em;
+    margin-bottom:0.2em;
+  }
+  
 }
 @media screen and (max-width: 480px) {
 
